--- a/vignettes/documenting-functions-macros.Rmd
+++ b/vignettes/documenting-functions-macros.Rmd
@@ -35,6 +35,11 @@ Place them immediately before a `define` or `defmacro`:
   (lambda (x) (* x x)))
 ```
 
+```{arl, include=FALSE}
+(assert-equal 9 (square 3))
+(assert-equal 4 (square -2))
+```
+
 The same syntax works for macros:
 
 ```{arl}
@@ -97,6 +102,11 @@ definitions, or adding fields incrementally:
 (doc! double :description "Double x." :examples "(double 5) ; => 10")
 ```
 
+```{arl, include=FALSE}
+(assert-equal 6 (double 3))
+(assert-equal 10 (double 5))
+```
+
 `doc!` **merges** with existing documentation — setting `:examples` does
 not erase a previously set `:description`.
 
@@ -109,6 +119,12 @@ not erase a previously set `:description`.
 (doc double "examples")   ; => "(double 5) ; => 10"
 (doc double "note")       ; => "Pure function."
 (doc double "all")        ; => named list of all fields
+```
+
+```{arl, include=FALSE}
+(assert-equal "Double x." (doc double))
+(assert-equal "(double 5) ; => 10" (doc double "examples"))
+(assert-equal "Pure function." (doc double "note"))
 ```
 
 ## Which mechanism to use
