--- a/vignettes/tail-call-optimization.Rmd
+++ b/vignettes/tail-call-optimization.Rmd
@@ -41,6 +41,10 @@ that self-recurse are automatically optimized too.
 (factorial 100000 1)   ; no stack overflow
 ```
 
+```{arl, include=FALSE}
+(assert-equal 120 (factorial 5 1))
+```
+
 The compiled R code looks roughly like:
 
 ```r
@@ -82,6 +86,10 @@ The compiler recognizes self-calls in tail position through these forms:
         (if (> x 0)
           (sum-positive (cdr lst) (+ acc x))   ; tail: let -> if -> consequent
           (sum-positive (cdr lst) acc))))))     ; tail: let -> if -> alternative
+```
+
+```{arl, include=FALSE}
+(assert-equal 6 (sum-positive (list 1 -2 2 -3 3) 0))
 ```
 
 A call that is **not** in tail position — for example, wrapped in another
@@ -144,6 +152,10 @@ not apply, the `looping` module provides Clojure-style `loop`/`recur`:
       (if (< i 2)
         acc
         (recur (- i 1) (* acc i))))))
+```
+
+```{arl, include=FALSE}
+(assert-equal 120 (factorial 5))
 ```
 
 `loop` establishes named bindings and `recur` jumps back to the top of
