--- a/vignettes/stdlib-core.Rmd
+++ b/vignettes/stdlib-core.Rmd
@@ -235,7 +235,11 @@ Expand one layer of macros in expr.
 
 **Examples:**
 ```{arl}
-(macroexpand-1 '(when #t 42))  ; => (if #t 42 #nil)
+(macroexpand-1 '(when #t 42))  ; => (if #t (begin 42) #nil)
+```
+
+```{arl, include=FALSE}
+(assert-equal '(if #t (begin 42) #nil) (macroexpand-1 '(when #t 42)))
 ```
 
 **See also:** [macroexpand](#macroexpand), [macroexpand-all](#macroexpand-all)
@@ -248,7 +252,11 @@ Fully expand all macros in expr. Same as macroexpand with no depth.
 
 **Examples:**
 ```{arl}
-(macroexpand-all '(when #t 42))  ; => (if #t 42 #nil)
+(macroexpand-all '(when #t 42))  ; => (if #t (begin 42) #nil)
+```
+
+```{arl, include=FALSE}
+(assert-equal '(if #t (begin 42) #nil) (macroexpand-all '(when #t 42)))
 ```
 
 **See also:** [macroexpand](#macroexpand), [macroexpand-1](#macroexpand-1)
@@ -313,6 +321,10 @@ Evaluate expr in the context of data (a data frame or list).
 (with df (+ x y))         ; => c(5, 7, 9)
 ```
 
+```{arl, include=FALSE}
+(assert-equal (c 5 7 9) (with (data.frame :x (c 1 2 3) :y (c 4 5 6)) (+ x y)))
+```
+
 **See also:** [within](#within)
 
 ---
@@ -329,6 +341,10 @@ Evaluate expr within data, returning modified data.
 (within df (<- z (* x 2)))   ; returns df with new column z
 ```
 
+```{arl, include=FALSE}
+(assert-true (%in% "z" (names (within (data.frame :x (c 1 2 3)) (<- z (* x 2))))))
+```
+
 **See also:** [with](#with)
 
 ---
@@ -343,6 +359,10 @@ Subset x using condition. Optional rest args for select, drop, etc.
 ```{arl}
 (define df (data.frame :x (c 1 2 3) :y (c 10 20 30)))
 (subset df (> x 1))       ; rows where x > 1
+```
+
+```{arl, include=FALSE}
+(assert-equal 2L (nrow (subset (data.frame :x (c 1 2 3) :y (c 10 20 30)) (> x 1))))
 ```
 
 **See also:** [with](#with), [within](#within)
@@ -610,6 +630,10 @@ Arl's compiler.
 (r/eval (quote (seq_len 5)))  ; => c(1, 2, 3, 4, 5)
 ```
 
+```{arl, include=FALSE}
+(assert-equal (c 1 2 3 4 5) (r/eval (quote (seq_len 5))))
+```
+
 **Note:** Useful for evaluating raw R calls that use R control flow (for,
 while) or other constructs that Arl normally overrides.
 
@@ -634,6 +658,10 @@ overriding hygiene.
 (aif (+ 2 3) it 0)          ; => 5
 ```
 
+```{arl, include=FALSE}
+(assert-equal 5 (aif (+ 2 3) it 0))
+```
+
 **Note:** Use capture when writing anaphoric macros or other macros that
 intentionally introduce a binding visible to the caller. Without
 capture, Arl's automatic hygiene renames macro-introduced symbols to
@@ -656,6 +684,11 @@ hygienic macros.
 (gensym "tmp")            ; => tmp2 (unique with prefix)
 ```
 
+```{arl, include=FALSE}
+(assert-true (symbol? (gensym)))
+(assert-true (symbol? (gensym "tmp")))
+```
+
 **Note:** Each call returns a fresh symbol guaranteed not to conflict with
 user-defined names. The optional prefix defaults to "G".
 
@@ -676,6 +709,11 @@ Return #t if the symbol names a currently-defined macro.
 (macro? 'car)             ; => #f
 ```
 
+```{arl, include=FALSE}
+(assert-true (macro? 'my-mac))
+(assert-false (macro? 'car))
+```
+
 ---
 
 ### macroexpand {#macroexpand}
@@ -690,6 +728,10 @@ remain.
 (defmacro my-when (test body)
 `(if ,test ,body #nil))
 (macroexpand '(my-when #t 42))  ; => (if #t 42 #nil)
+```
+
+```{arl, include=FALSE}
+(assert-equal '(if #t 42 #nil) (macroexpand '(my-when #t 42)))
 ```
 
 **Note:** Also available as `macroexpand-all` (alias).
@@ -709,6 +751,10 @@ Expand only the outermost macro call in expr (one step).
 (defmacro my-when (test body)
 `(if ,test ,body #nil))
 (macroexpand-1 '(my-when #t 42))  ; => (if #t 42 #nil)
+```
+
+```{arl, include=FALSE}
+(assert-equal '(if #t 42 #nil) (macroexpand-1 '(my-when #t 42)))
 ```
 
 **See also:** [macroexpand](#macroexpand), [macro?](#macro-p)
@@ -776,6 +822,11 @@ Extract the unevaluated expression from a promise.
 (promise-expr p)          ; => (+ 1 2)
 ```
 
+```{arl, include=FALSE}
+(define __pe (delay (+ 1 2)))
+(assert-equal '(+ 1 2) (promise-expr __pe))
+```
+
 **Note:** Signals an error if p is not a promise.
 
 **See also:** [promise?](#promise-p), [force](#force), delay
@@ -796,6 +847,10 @@ standard library bindings live).
 (environment? (toplevel-env))  ; => #t
 ```
 
+```{arl, include=FALSE}
+(assert-true (environment? (toplevel-env)))
+```
+
 **See also:** [current-env](#current-env)
 
 ---
@@ -809,6 +864,10 @@ Return the current Arl evaluation environment.
 **Examples:**
 ```{arl}
 (environment? (current-env))  ; => #t
+```
+
+```{arl, include=FALSE}
+(assert-true (environment? (current-env)))
 ```
 
 **See also:** [toplevel-env](#toplevel-env)
